--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://www.instagram.com/littlesoares/" target="_blank">Letícia Soares</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a></p>
+        <p>Site desenvolvido por <a href="https://www.instagram.com/littlesoares/" target="_blank">Letícia Soares</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a></p>
     </footer>
 </body>
 </html>
